try to avoid scrollbar

--- a/src/styles/_view_composite.scss
+++ b/src/styles/_view_composite.scss
@@ -10,8 +10,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        right: 1px;
+        bottom: 1px;
       }
     }
   }
